<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:background="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:id="@+id/container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/currentDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="setDateT"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sport"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvSport"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Role"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvRole"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Height"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DateOfCoop"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="setDate"
                android:textSize="14sp" />
            <!--   <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/hint_password"
               android:textStyle="bold"
            <EditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="30dp" /> -->

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorOrange"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/btn_logout_bg"
                android:text="@string/btn_logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>